test/core/errors/sql_tables_error/zs/no_fields_error.zs
package no_fields_error;

sql_table TestTable
{
    // ordinary table must have at least one field!
};
